# release-copilot-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TRACING.md  TRACING_QUICKSTART.md  dev-note.md  docker-compose.yml  main.py  pyproject.toml  view_traces.py
.devcontainer/: devcontainer.json  post_create.sh
.github/instructions/: python.instructions.md
data/: log.json  pipelines.json
examples/: README.md  api_client_example.py  mcp_usage_example.py
src/rc_agent/agents/: job_logs_analyzer_agent.py  mcp_orchestrator.py  orchestrator.py  pipeline_status_agent.py  release_copilot_agent.py
src/rc_agent/app/: api.py  cli_chat.py  devui_entry.py  hello_model.py
src/rc_agent/config/: settings.py
src/rc_agent/eval/: QUICKSTART.md  README.md  __init__.py  collect_responses.py  collected_responses.json  eval_results.json  eval_tool_selection.py  evaluate.py  ground_truth.json
src/rc_agent/mcp/: __init__.py  job_logs_mcp_server.py  pipeline_mcp_server.py
src/rc_agent/services/: __init__.py  logs_service.py  pipeline_service.py
src/rc_agent/telemetry/: __init__.py  otel.py
src/rc_agent/tools/: job_logs_tool.py  pipelines_tool.py
